* Minor update: (200903)
- Added [Deluge-server, Deluge-web, RadarrDotNet, Mylar3, LidarrDotNET] to the OMEGA list.

* Minor update: (200812)
- Added [HandBrake_CLI, Komga] to the ALPHA list.
- Added [QSabNZBd3] to the OMEGA list.

* Minor update: (200811)
- Added [OTransmission, OSickGear, LazyLibrarian] to the OMEGA list.
- Moved the malware detection packages from loading first to (almost) last. These are not "live" scanners, so makes more sense to load them after everything else.

* Minor update: (200724)
- Added [AcronisK, JRE_ARM, QJDK14, CACert, Teamspeak3] to the ALPHA list.
- Added [TransmissionWC, Ombi4] to the OMEGA list.

* Minor update: (200610)
- Added [NMAP, Qemu] to the ALPHA list.
- Added [SABnzbd, QTransmission3] to the OMEGA list.
- Code: make constants readonly, remove a few extra characters.

* Minor update: (200418)
- Added [QMultimedia] to the ALPHA list.
- Code: use only QTS binaries.

* Minor update: (191222)
- Added [ELFx31, Apache74] to the ALPHA list.

* Minor update: (190929)
- Added [USBSerialdrivers, TomCat9, postgresql, OpenPlexTheatre] to the ALPHA list.
- Disabled [AirSonic, QMadSonic, QSubSonic] in the ALPHA list.
- Added [NZBGet] to the OMEGA list.

* Minor update: (190919)
- Added new 'malware detection and removal' section with [MalwareRemover, MCAFEE_QNAP] to the ALPHA list.
- Added [NvKernelDriver, MultimediaConsole, QuMagieCore, qumagie] to the ALPHA list.

* Minor update: (190417)
- Added [Apache73, XTeve] to the ALPHA list.

* Minor update: (190303)
- Added [MediaInfoCLI, MediaInfoShared, pmp] to the ALPHA list.

* Minor update: (190211)
- Added [PostgreSQLPremium] to the ALPHA list.
- minor code cleanup - no changes to functionality.

* Minor update: (190205)
- Added [HideThatBanner] to the ALPHA list.
- Added [QBazarr, OWatcher3] to the OMEGA list.

* Minor update: (181217)
- Added [QJDK11, PlexPlayer, Windscribe] to the ALPHA list.
- Added [RunLast] to the OMEGA list.
- Move source list display location.
