@@ -35,8 +35,10 @@ SickGear
 OSickGear
 SickChill
 QSickChill
+QSickChill3
 Medusa
 OMedusa
+PyMedusa3
 Headphones
 QHeadPhones
 Mylar
